prevent layout shift when image load in

--- a/client/src/components/ChampionReducedCard/ChampionReducedCard.module.css
+++ b/client/src/components/ChampionReducedCard/ChampionReducedCard.module.css
@@ -2,3 +2,9 @@
 	max-width: 350px;
 	cursor: pointer;
 }
+
+.imageContainer {
+	aspect-ratio: 1215 / 717;
+	width: 100%;
+	font-size: 0;
+}
