--- a/client/src/components/Summoner/SummonerCard.module.css
+++ b/client/src/components/Summoner/SummonerCard.module.css
@@ -1,3 +1,9 @@
 .summonerCard {
 	cursor: pointer;
 }
+
+.imageContainer {
+	aspect-ratio: 1 / 1;
+	width: 100%;
+	font-size: 0;
+}
